--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>正在跳转 http://47.101.133.153/</title>
+		<title>正在跳转 http://47.101.133.153</title>
 	</head>
 	<body>
 		<p>跳转中<a href="http://47.101.133.153/" target="_blank">http://47.101.133.153/</a></p>
@@ -19,7 +19,7 @@
 		    var new_url = old_url.replace('www.dh7zoj.top', "47.101.133.153");
 		    window.location.replace(new_url);
 		}else {
-		    window.location.href="https://47.101.133.153/";
+		    window.location.href="https://dh7zoj.top";
 		}
 	</script>
 </html>
