--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img src="images/favicon.png" alt="HomeLogo">
+							<span class="icon fa-star"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
